Adding Wind64 binaries so BP projects can use this

--- a/ALSUtils.uplugin
+++ b/ALSUtils.uplugin
@@ -18,7 +18,10 @@
 		{
 			"Name": "ALSUtils",
 			"Type": "Runtime",
-			"LoadingPhase": "PreLoadingScreen"
+			"LoadingPhase": "PreLoadingScreen",
+			"WhitelistPlatforms": [
+                 "Win64"
+             ]
 		}
 	]
 }
